Fix #857 - added middle vertical align.

--- a/oscm-portal/WebContent/marketplace/css/mp.css
+++ b/oscm-portal/WebContent/marketplace/css/mp.css
@@ -4519,9 +4519,8 @@ div#headerrightareaBootstrap, rightarea a {
     left: 6px;
     padding-right: 10px;
     font-weight: bold;
-    top: 0;
-    left: 6px;
     width: 45%;
+    vertical-align: middle;
   }
   .RespTable td:before {
     content: attr(data-label) ;
